--- a/apps/vikunja/release.yaml
+++ b/apps/vikunja/release.yaml
@@ -38,25 +38,21 @@ spec:
         config:
           enabled: true
           data:
-            config.yml: |
+            config.yml: 
               service:
                 frontendUrl: http://vikunja.local
                 enableregistration: false
-      env:
-        VIKUNJA_DATABASE_TYPE: "postgres"
-        VIKUNJA_DATABASE_USER: "vikunja"
-        VIKUNJA_DATABASE_PASSWORD: "vikunja"
-        VIKUNJA_DATABASE_NAME: "vikunja"
     frontend:
       enabled: true
-      # ingress:
-      #   main:
-      #     enabled: true
-      #     annotations:
-      #       kubernetes.io/ingress.class: "nginx"
-      #       nginx.ingress.kubernetes.io/proxy-body-size: "0"
-      #     hosts:
-      #       - host: vikunja.pacholoamit.com
-      #         paths:
-      #           - "/"
+      ingress:
+        main:
+          enabled: true
+          annotations:
+            kubernetes.io/ingress.class: "nginx"
+            # proxy-body-size is set to 0 to remove the body limit on file uploads
+            nginx.ingress.kubernetes.io/proxy-body-size: "0"
+          hosts:
+            - host: vikunja.pacholoamit.com
+              paths:
+                - "/"
       
